refactor: use string templates in email